Adicionando artigo sobre meu aprendizado na trybe; Outro na tag aside

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./images/illuminati.png" >
+    <link rel="shortcut icon" href="./images/illuminati.png">
     <title>Project lessons learned</title>
 </head>
 
@@ -18,42 +18,46 @@
         <img id="minha_foto" src="./images/MinhaFoto.jpg">
     </section>
 
-    <section>
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Shell</li>
-            <li>Como começar a construir um linkedin profissional</li>
-            <li>Como que a internet funciona</li>
-            <li>Versionamento com o GIT</li>
-            <li>Fazer pull, push num repositório remoto no GitHUb</li>
-            <li>Iniciar uma criação de portfólio</li>
-            <li>Boas práticas no trabalho em equipe com o GIT</li>
-            <li>Html</li>
-            <li>CSS</li>
-        </ol>
-    </section>
+    <article id="texto">
+        Sim, sou um Tryber, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido muito com essa escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás. Aprendi a usar o GitHub de forma profissional; Aprendi que existe uma semântica no HTML e que isso ajuda muito com os motores de buscas; Agora sei que meus sites devem alcançar todas as pessoas possíveis. Enfim, ainda tenho mais coisas para aprender, até mais!  
+    </article>
 
-    <section>
-        <ul id="licoes_a_aprender">
-            <li>Java Script</li>
-            <li>Banco de dados</li>
-            <li>Como ter uma comunicação acertiva e profissional</li>
-            <li>Melhores práticas no mercado</li>
-            <li>O processo de criação de uma aplicação</li>
-            <li>Como me portar diante de situações corriqueiras no dia de uma pessoa programadora</li>
-            <li>React</li>
-            <li>Aprender a aprender</li>
-            <li>Como criar um network de sucesso</li>
-            <li>Soft Skils para esse mercado</li>
-        </ul>
-    </section>
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Shell</li>
+        <li>Como começar a construir um linkedin profissional</li>
+        <li>Como que a internet funciona</li>
+        <li>Versionamento com o GIT</li>
+        <li>Fazer pull, push num repositório remoto no GitHUb</li>
+        <li>Iniciar uma criação de portfólio</li>
+        <li>Boas práticas no trabalho em equipe com o GIT</li>
+        <li>Html</li>
+        <li>CSS</li>
+    </ol>
+
+
+
+    <ul id="licoes_a_aprender">
+        <li>Java Script</li>
+        <li>Banco de dados</li>
+        <li>Como ter uma comunicação acertiva e profissional</li>
+        <li>Melhores práticas no mercado</li>
+        <li>O processo de criação de uma aplicação</li>
+        <li>Como me portar diante de situações corriqueiras no dia de uma pessoa programadora</li>
+        <li>React</li>
+        <li>Aprender a aprender</li>
+        <li>Como criar um network de sucesso</li>
+        <li>Soft Skils para esse mercado</li>
+    </ul>
+
 
     <footer id="rodape">
         <h4>Contato</h4>
         <ul>
             <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
             <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
-            <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a></li>
+            <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a>
+            </li>
         </ul>
     </footer>
 </body>
