Adicionando artigo sobre meu aprendizado na trybe; Outro na tag aside

--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     </section>
 
     <article id="texto">
-        Sim, sou um Tryber, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido muito com essa escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás. Aprendi a usar o GitHub de forma profissional; Aprendi que existe uma semântica no HTML e que isso ajuda muito com os motores de buscas; Agora sei que meus sites devem alcançar todas as pessoas possíveis. Enfim, ainda tenho mais coisas para aprender, até mais!  
+        Sim, sou um Tryber, com todo orgulho do mundo. Desde o processo seletivo eu tenho aprendido muito com essa
+        escola do futuro. Em duas semanas eu aprendi tanta coisa que nem se compara o meu EU de duas semanas atrás.
+        Aprendi a usar o GitHub de forma profissional; Aprendi que existe uma semântica no HTML e que isso ajuda muito
+        com os motores de buscas; Agora sei que meus sites devem alcançar todas as pessoas possíveis. Enfim, ainda tenho
+        mais coisas para aprender, até mais!
     </article>
+
+    <section>
+        <aside>
+            Sou tryber com orgulho, aqui eu estou construindo desde o início um mindset de um verdadeiro profissional
+            desenvolvedor. Passando desde o Shell até o deploy de um site.
+        </aside>
+    </section>
 
     <ol id="licoes_aprendidas">
         <li>Unix</li>
