Adicionando à tag img um alt

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-        <img id="minha_foto" src="./images/MinhaFoto.jpg">
+        <img id="minha_foto" src="./images/MinhaFoto.jpg" alt="Uma foto preto e branca minha.">
     </section>
 
     <article id="texto">
