Adicionando navegação na paǵina

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">O que aprendi na Trybe em 2 semanas!</h1>
+        <nav>
+            <ul>
+              <li id="nav"><a href="#minha_foto">Uma Foto Minha</a></li>
+              <li id="nav"><a href="#texto">Sobre minha jornada de aprendizado</a></li>
+              <li id="nav"><a href="#licoes_aprendidas">O que eu já aprendi</a></li>
+              <li id="nav"><a href="#licoes_a_aprender">O que quero aprender</a></li>
+              <li id="nav"><a href="#rodape">Contato</a></li>
+            </ul>
+          </nav> 
     </header>
 
     <section>
