Add nova linha no style.css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./images/illuminati.png">
     <title>Project lessons learned</title>
@@ -11,18 +10,20 @@
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">O que aprendi na Trybe em 2 semanas!</h1>
+        <h1 id="titulo">2 SEMANAS DE TRYBE</h1>
+        <h2>Tudo que aprendi até aqui!</h2>
+
         <nav>
             <ul>
-              <li id="nav"><a href="#minha_foto">Uma Foto Minha</a></li>
-              <li id="nav"><a href="#texto">Sobre minha jornada de aprendizado</a></li>
-              <li id="nav"><a href="#licoes_aprendidas">O que eu já aprendi</a></li>
-              <li id="nav"><a href="#licoes_a_aprender">O que quero aprender</a></li>
-              <li id="nav"><a href="#rodape">Contato</a></li>
+              <li class="nav"><a href="#minha_foto">Uma Foto Minha</a></li>
+              <li class="nav"><a href="#texto">Sobre minha jornada de aprendizado</a></li>
+              <li class="nav"><a href="#licoes_aprendidas">O que eu já aprendi</a></li>
+              <li class="nav"><a href="#licoes_a_aprender">O que quero aprender</a></li>
+              <li class="nav"><a href="#rodape">Contato</a></li>
             </ul>
           </nav> 
     </header>
-
+ 
     <section>
         <img id="minha_foto" src="./images/MinhaFoto.jpg" alt="Uma foto preto e branca minha.">
     </section>
