--- a/index.html
+++ b/index.html
@@ -20,30 +20,31 @@
           <li class="nav-item"><a href="index.html">Home</a></li>
           <li class="nav-item"><a href="#licoes_aprendidas">Lições</a></li>
           <li class="nav-item"><a href="#rodape">Contato</a></li>
-
         </ul>
       </nav>
     </header>
 
     <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
     <div id="container">
-    <article class="lado-esquerdo">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
-        recusandae veniam maiores accusamus maxime necessitatibus ipsum optio
-        facilis itaque non illum, minima possimus repellat? Fugiat ex vel quam
-        repudiandae neque commodi aliquam iusto delectus dolorem iure id fuga
-        voluptas rerum, assumenda suscipit perferendis qui repellat quia veniam
-      </p>
-    </article>
-    <aside class="lado-direito">
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure provident
-        quia amet expedita ducimus repudiandae error eaque deserunt aliquam,
-        explicabo, quaerat unde laboriosam necessitatibus dolor aut maiores
-      </p>
-    </aside>
-  </div>
+      <article class="lado-esquerdo">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+          recusandae veniam maiores accusamus maxime necessitatibus ipsum optio
+          facilis itaque non illum, minima possimus repellat? Fugiat ex vel quam
+          repudiandae neque commodi aliquam iusto delectus dolorem iure id fuga
+          voluptas rerum, assumenda suscipit perferendis qui repellat quia
+          veniam
+        </p>
+      </article>
+      <aside class="lado-direito">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure
+          provident quia amet expedita ducimus repudiandae error eaque deserunt
+          aliquam, explicabo, quaerat unde laboriosam necessitatibus dolor aut
+          maiores
+        </p>
+      </aside>
+    </div>
     <section id="listas">
       <ol id="licoes_aprendidas">
         <li>Unix</li>
