correçao do codeclimate - 2

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main id="conteudo-principal">
         <section class="secao">
             <img src="eu-redondo.svg" id="minha_foto" alt="Foto de Diogenes de frente, sorrindo, com fundo branco">
-            <div class="arame-base arame-um"></div>
-            <div class="arame-base arame-dois"></div>
+            <div class="arame-base posicao-um"></div>
+            <div class="arame-base posicao-dois"></div>
             <article class="sobre_aprendizado lado-esquerdo">
                 <h2 class="titulo-article">Meu apredizado na Trybe</h2>
                 <p class="text-artigo">
@@ -36,31 +36,31 @@
             <nav class="box-lista">
                 <h2 class="green-color">Lições aprendidas</h2>
                 <ol id="licoes_aprendidas" class="list">
-                    <a href="https://pt.wikipedia.org/wiki/Unix" target="_blank"><li>Unix</li></a>
-                    <a href="https://pt.wikipedia.org/wiki/Bash" target="_blank"><li>Bash</li></a>
-                    <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank"><li>Git</li></a>
-                    <a href="https://www.hostinger.com.br/tutoriais/o-que-github/" target="_blank"><li>Github</li></a>
-                    <a href="https://edu.gcfglobal.org/pt/conhecendo-zoom/o-que-e-e-para-que-serve-o-zoom/1/" target="_blank"><li>Zoom</li></a>
-                    <a href="https://www.minhaconexao.com.br/blog/entenda-como-funciona-a-internet-que-chega-a-sua-casa/" target="_blank"><li>Internet</li></a>
-                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/" target="_blank"><li>Html</li></a>
-                    <a href="https://www.w3schools.com/css/" target="_blank"><li>Css</li></a>
-                    <a href="https://www.youtube.com/watch?v=VRXmsVF_QFY" target="_blank"><li>Empatia</li></a>
-                    <a href="https://slack.com/intl/pt-br/help/articles/115004071768-O-que-%C3%A9-o-Slack-" target="_blank"><li>Slack</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Unix" target="_blank"><li class="item-list">Unix</li></a>
+                    <a href="https://pt.wikipedia.org/wiki/Bash" target="_blank"><li class="item-list">Bash</li></a>
+                    <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank"><li class="item-list">Git</li></a>
+                    <a href="https://www.hostinger.com.br/tutoriais/o-que-github/" target="_blank"><li class="item-list">Github</li></a>
+                    <a href="https://edu.gcfglobal.org/pt/conhecendo-zoom/o-que-e-e-para-que-serve-o-zoom/1/" target="_blank"><li class="item-list">Zoom</li></a>
+                    <a href="https://www.minhaconexao.com.br/blog/entenda-como-funciona-a-internet-que-chega-a-sua-casa/" target="_blank"><li class="item-list">Internet</li></a>
+                    <a href="https://www.homehost.com.br/blog/tutoriais/o-que-e-html/" target="_blank"><li class="item-list">Html</li></a>
+                    <a href="https://www.w3schools.com/css/" target="_blank"><li class="item-list">Css</li></a>
+                    <a href="https://www.youtube.com/watch?v=VRXmsVF_QFY" target="_blank"><li class="item-list">Empatia</li></a>
+                    <a href="https://slack.com/intl/pt-br/help/articles/115004071768-O-que-%C3%A9-o-Slack-" target="_blank"><li class="item-list">Slack</li></a>
                 </ol>
             </nav>
             <nav class="box-lista">
                 <h2 class="gray-color">Lições a aprender</h2>
                 <ul id="licoes_a_aprender" class="list">
-                    <li><a href="#">JavaScript</a></li>
-                    <li><a href="#">NodeJs</a></li>
-                    <li><a href="#">React</a></li>
-                    <li><a href="#">Forms</a></li>
-                    <li><a href="#">DOM</a></li>
-                    <li><a href="#">SQL</a></li>
-                    <li><a href="#">Express.js</a></li>
-                    <li><a href="#">ES6</a></li>
-                    <li><a href="#">Responsive</a></li>
-                    <li><a href="#">Unit Test</a></li>
+                    <li class="item-list">JavaScript</li>
+                    <li class="item-list">NodeJs</li>
+                    <li class="item-list">React</li>
+                    <li class="item-list">Forms</li>
+                    <li class="item-list">DOM</li>
+                    <li class="item-list">SQL</li>
+                    <li class="item-list">Express.js</li>
+                    <li class="item-list">ES6</li>
+                    <li class="item-list">Responsive</li>
+                    <li class="item-list">Unit Test</li>
                 </ul>
             </nav>
         </section>
@@ -80,9 +80,9 @@
     </main>
     <footer id="rodape">
         <h3>Todos os direitos reservados - <span>Diogenes Santos</span> | </h3>
-        <nav class="redes-sociais">
-            <a href="https://www.linkedin.com/in/diogenessant/" target="_blank"><em class="fab fa-linkedin"></em></a>
-            <a href="https://github.com/SantosDiv" target="_blank"><em class="fab fa-github"></em></a>
+        <nav>
+            <a href="https://www.linkedin.com/in/diogenessant/" target="_blank" class="rede-social"><em class="fab fa-linkedin"></em></a>
+            <a href="https://github.com/SantosDiv" target="_blank" class="rede-social"><em class="fab fa-github"></em></a>
         </nav>
     </footer>
 </body>
