Otimizacao aplicando tags semanticas HTML5

--- a/index.html
+++ b/index.html
@@ -13,32 +13,35 @@
   </header>
   <main id="conteudo-principal">
     <img id="minha_foto" src="https://thumbs2.imgbox.com/ee/bf/U0SoaEPl_t.jpg" alt="Imagem Enio Nicael"/>
-    <h2>Lições Aprendidas</h2>
-    <ol id="licoes_aprendidas">
-      <li>Inteligência emocional</li>
-      <li>Empatia</li>
-      <li>Bash</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Box Model</li>
-      <li>Posicionamento</li>
-      <li>Organização</li>
-    </ol>
-    <h2>Lições a Aprender</h2>
-    <ul id="licoes_a_aprender">
-      <li>Javascript</li>
-      <li>ReactJS</li>
-      <li>Banco de dados</li>
-      <li>REST</li>
-      <li>Segurança</li>
-      <li>Deploy</li>
-      <li>Python</li>
-      <li>Algoritmos</li>
-      <li>Estrutura de dados</li>
-      <li>Trabalho em equipe</li>
-    </ul>
+    <a href="https://github.com/EnioNicael" target="_blank">GitHub</a>
+    <section>
+      <h2>Lições Aprendidas</h2>
+      <ol id="licoes_aprendidas">
+        <li>Inteligência emocional</li>
+        <li>Empatia</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Box Model</li>
+        <li>Posicionamento</li>
+        <li>Organização</li>
+      </ol>
+      <h2>Lições a Aprender</h2>
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>ReactJS</li>
+        <li>Banco de dados</li>
+        <li>REST</li>
+        <li>Segurança</li>
+        <li>Deploy</li>
+        <li>Python</li>
+        <li>Algoritmos</li>
+        <li>Estrutura de dados</li>
+        <li>Trabalho em equipe</li>
+      </ul>
+    </section>
     <article>
       <h2>Primeiras semanas</h2>
       <p>Até aqui foram duas semanas intensas de muito estudo e aprendizagem
@@ -57,10 +60,7 @@
     </aside>
   </main>
   <footer id="rodape">
-    <ul>
-      <li><a href="https://www.linkedin.com/in/enio-nicael/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a href="https://github.com/EnioNicael" target="_blank"><i class="fab fa-github"></i></a></li>
-    </ul>
+    <p>Desenvolvido por <strong>Enio Nicael</strong></p>
   </footer>
 </body>
 </html>
