link externo agora abrindo em nova aba e artigos dos requisitos 8 e 9 escritos

--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
                 <li>SQL</li>
             </ul>
         </div>
-        <article></article>
-        <aside></aside>
+        <div>
+            <article>
+                <p>
+                    Durante as últimas semanas tenho aprimorado meus conhecimentos com desenvolvimento de software e quem diria que aquela pessoa que nunca havia mexido em um linux ou com git agora estaria usando diariamente e conseguindo entender o que estava sendo feito. Incrível pensar como minha vida mudou criando e sabendo como são criados sites e elementos que permeiam nosso dia a dia.
+                </p>
+            </article>
+
+            <aside>
+                <p>
+                    Se servir de inspiração para outros, olhem o código, apertem f12, inspecionem cada página que acharem atrativa, uma das formas que usei para aprender mais sobre foi usando a curiosidade como ferramenta e está deve ajudar outros também.
+                </p>
+            </aside>
+        </div>
         <footer id="rodape">
-            <a href="https://github.com/JoaoPBarros">
+            <a href="https://github.com/JoaoPBarros" target="_blank">
                 <img id="git_site"src="/images/Github-PNG-Image.png" alt="Link para o GitHub de João Pedro Barros">
             </a>
         </footer>
