--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       </nav>
     </header>
 
+    <div id="foto-bg">
     <img id="minha_foto" src="./images/minha_foto.jpeg" alt="" />
+    </div>
     <div id="container">
       <article class="lado-esquerdo">
         <p>
