correçao do codeclimate - 3

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="secao-listas">
             <nav class="box-lista">
                 <h2 class="green-color">Lições aprendidas</h2>
-                <ol id="licoes_aprendidas" class="list">
+                <ol id="licoes_aprendidas">
                     <a href="https://pt.wikipedia.org/wiki/Unix" target="_blank"><li class="item-list">Unix</li></a>
                     <a href="https://pt.wikipedia.org/wiki/Bash" target="_blank"><li class="item-list">Bash</li></a>
                     <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank"><li class="item-list">Git</li></a>
@@ -50,17 +50,17 @@
             </nav>
             <nav class="box-lista">
                 <h2 class="gray-color">Lições a aprender</h2>
-                <ul id="licoes_a_aprender" class="list">
-                    <li class="item-list">JavaScript</li>
-                    <li class="item-list">NodeJs</li>
-                    <li class="item-list">React</li>
-                    <li class="item-list">Forms</li>
-                    <li class="item-list">DOM</li>
-                    <li class="item-list">SQL</li>
-                    <li class="item-list">Express.js</li>
-                    <li class="item-list">ES6</li>
-                    <li class="item-list">Responsive</li>
-                    <li class="item-list">Unit Test</li>
+                <ul id="licoes_a_aprender">
+                    <li class="item-list gray-color gray-box">JavaScript</li>
+                    <li class="item-list gray-color gray-box">NodeJs</li>
+                    <li class="item-list gray-color gray-box">React</li>
+                    <li class="item-list gray-color gray-box">Forms</li>
+                    <li class="item-list gray-color gray-box">DOM</li>
+                    <li class="item-list gray-color gray-box">SQL</li>
+                    <li class="item-list gray-color gray-box">Express.js</li>
+                    <li class="item-list gray-color gray-box">ES6</li>
+                    <li class="item-list gray-color gray-box">Responsive</li>
+                    <li class="item-list gray-color gray-box">Unit Test</li>
                 </ul>
             </nav>
         </section>
