Artigo dos requisitos 8 e 9 agora lado a lado, icone github centralizado, alinhamento dos textos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li>SQL</li>
             </ul>
         </div>
-        <div>
+        <div id="artigos">
             <article>
                 <p>
                     Durante as últimas semanas tenho aprimorado meus conhecimentos com desenvolvimento de software e quem diria que aquela pessoa que nunca havia mexido em um linux ou com git agora estaria usando diariamente e conseguindo entender o que estava sendo feito. Incrível pensar como minha vida mudou criando e sabendo como são criados sites e elementos que permeiam nosso dia a dia.
