--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
              <td>Coisa a menos</td>
          </tr>
      </table>
-     <article id ="lado-esquerdo">
+     <article class="lado-esquerdo">
         <h3>Artigo sobre o aprendizado</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
     </article>
-    <aside id="lado-direito" >
+    <aside class="lado-direito" >
     <h3>Passagem sobre aprendizado</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
