Ultimo requisito: acerto

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
   </div>
   <article class="lado-esquerdo">
     Estudar na Trybe tem sido desafiador, a forma como nos apresentam o conteúdo, a atenção de todos os envolvidos e o material que nos instrui é excelente.
-    Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill.
-    O programa inclui um atendimento com especialista.
-    O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
-    O conhecimento é todo aplicado para estarmos ligado ao futuro.
     <section class="lado-direito">
       <aside>
         <p>O primeiro projeto foi trabalhoso, devido aos critérios, precisamos treinar para conseguir resolver as pendências.</p>
       </aside>
     </section>  </article>
+    Já aprendi sobre as caracteristicas das emoções, trabalhando a soft skill.
+    O programa inclui um atendimento com especialista.
+    O curso tem muitas matérias muito boas. Começamos com dois dias de muita integração.
+    O conhecimento é todo aplicado para estarmos ligado ao futuro.
   <table id="tabela">
     <tr>
       <th>Modulo</th>
@@ -61,6 +61,11 @@
       <td>HTML - CSS</td>
       <td>Site</td>
       <td>100%</td>
+    </tr>
+    <tr>
+      <td>Javascript</td>
+      <td>Inicio</td>
+      <td>7%</td>
     </tr>
   </table>
 </body>
