ultimo requisito lado

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
              <td>Coisa a menos</td>
          </tr>
      </table>
+     <section class="content">
      <article class="lado-esquerdo">
         <h3>Artigo sobre o aprendizado</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
@@ -66,6 +67,7 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
     </aside>
+  </section>
     <a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank">Linkedin</a>
     <a href="https://github.com/" target="_blank">GitHub</a>
 </main>
