New Commit Adjust v4

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -30,7 +31,7 @@
           <li>Slack</li>
           <li>Semantic HTML</li>
         </ol>
-        <ol id="licoes_a_aprender"><p><h1>Licoes a Aprender</h1></p>
+        <ul id="licoes_a_aprender"><p><h1>Licoes a Aprender</h1></p>
           <li>Forms</li>
           <li>Flexbox</li>
           <li>Responsivo</li>
@@ -41,13 +42,13 @@
           <li>Redux</li>
           <li>API</li>
           <li>React Hooks</li>
-        </ol>
+        </ul>
       </section>
       <section>
         <article id="artigo"><h1>Quem me Ensinou?</h1><p>O programa conta com mais de 1.500 horas de aulas presenciais e on-line e aborda introdução ao desenvolvimento de software, front-end, back-end, ciência da computação, engenharia de software, metodologias ágeis e habilidades comportamentais. O currículo da Trybe foi desenhado em parceria com as maiores empresas de tecnologia do Brasil e do mundo e ao longo da formação, estudamos JavaScript, HTML, CSS, React, Node, Express.js, SQL, Git, entre outras linguagens e frameworks.</p>
         </article>
-        <article id="artigo2"><h1>Meu Aprendizado</h1><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-        </article>
+        <div id="artigo2"><h1>Meu Aprendizado</h1><p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        </div>
       </section>
       <section>
         <table id="tabela"><p><h1 id="titletable">Quanto eu Aprendi?</h1></p><p><tr>
